WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254133
REGRESSION(
261822@main
) unresolved external symbol: PrepareBackingStoreBuffersInputData and PrepareBackingStoreBuffersOutputData
https://bugs.webkit.org/show_bug.cgi?id=254133
Summary
REGRESSION(261822@main) unresolved external symbol: PrepareBackingStoreBuffer...
Fujii Hironori
Reported
2023-03-19 06:14:00 PDT
REGRESSION(
261822@main
) unresolved external symbol: PrepareBackingStoreBuffersInputData and PrepareBackingStoreBuffersOutputData WinCairo Debug is failing to link.
https://build.webkit.org/#/builders/729/builds/3137
RemoteRenderingBackendMessageReceiver.cpp.obj : error LNK2019: unresolved external symbol "class WTF::TextStream & __cdecl WebKit::operator<<(class WTF::TextStream &,struct WebKit::PrepareBackingStoreBuffersInputData const &)" (??6WebKit@@YAAEAVTextStream@WTF@@AEAV12@AEBUPrepareBackingStoreBuffersInputData@
0@@Z
) referenced in function "class WTF::TextStream & __cdecl WTF::operator<<<struct WebKit::PrepareBackingStoreBuffersInputData,0>(class WTF::TextStream &,class WTF::Vector<struct WebKit::PrepareBackingStoreBuffersInputData,0,class WTF::CrashOnOverflow,16,struct WTF::FastMalloc> const &)" (??$?6UPrepareBackingStoreBuffersInputData@WebKit@@$0A@@WTF@@YAAEAVTextStream@
0@AEAV10@AEBV?$Vector@UPrepareBackingStoreBuffersInputData@WebKit@@$0A@VCrashOnOverflow@WTF@@$0BA@UFastMalloc@4@@0@@Z
) UnifiedSource-54928a2b-3.cpp.obj : error LNK2001: unresolved external symbol "class WTF::TextStream & __cdecl WebKit::operator<<(class WTF::TextStream &,struct WebKit::PrepareBackingStoreBuffersInputData const &)" (??6WebKit@@YAAEAVTextStream@WTF@@AEAV12@AEBUPrepareBackingStoreBuffersInputData@
0@@Z
) RemoteRenderingBackendMessageReceiver.cpp.obj : error LNK2019: unresolved external symbol "class WTF::TextStream & __cdecl WebKit::operator<<(class WTF::TextStream &,struct WebKit::PrepareBackingStoreBuffersOutputData const &)" (??6WebKit@@YAAEAVTextStream@WTF@@AEAV12@AEBUPrepareBackingStoreBuffersOutputData@
0@@Z
) referenced in function "class WTF::TextStream & __cdecl WTF::operator<<<struct WebKit::PrepareBackingStoreBuffersOutputData,0>(class WTF::TextStream &,class WTF::Vector<struct WebKit::PrepareBackingStoreBuffersOutputData,0,class WTF::CrashOnOverflow,16,struct WTF::FastMalloc> const &)" (??$?6UPrepareBackingStoreBuffersOutputData@WebKit@@$0A@@WTF@@YAAEAVTextStream@
0@AEAV10@AEBV?$Vector@UPrepareBackingStoreBuffersOutputData@WebKit@@$0A@VCrashOnOverflow@WTF@@$0BA@UFastMalloc@4@@0@@Z
) UnifiedSource-54928a2b-3.cpp.obj : error LNK2001: unresolved external symbol "class WTF::TextStream & __cdecl WebKit::operator<<(class WTF::TextStream &,struct WebKit::PrepareBackingStoreBuffersOutputData const &)" (??6WebKit@@YAAEAVTextStream@WTF@@AEAV12@AEBUPrepareBackingStoreBuffersOutputData@
0@@Z
)
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-03-19 06:20:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11695
EWS
Comment 2
2023-03-19 07:40:13 PDT
Committed
261837@main
(d7c801d7524a): <
https://commits.webkit.org/261837@main
> Reviewed commits have been landed. Closing PR #11695 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-03-19 07:41:17 PDT
<
rdar://problem/106914157
>
Simon Fraser (smfr)
Comment 4
2023-03-21 10:26:44 PDT
Sorry for the breakage. This code is not well covered by platform defines.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug