REGRESSION(261822@main) unresolved external symbol: PrepareBackingStoreBuffersInputData and PrepareBackingStoreBuffersOutputData https://bugs.webkit.org/show_bug.cgi?id=254133

Unreviewed build fix for WinCairo Debug.
It was failing to link:

> RemoteRenderingBackendMessageReceiver.cpp.obj : error LNK2019: unresolved external symbol
>     "class WTF::TextStream & __cdecl WebKit::operator<<(class WTF::TextStream &,struct WebKit::PrepareBackingStoreBuffersInputData const &)"
>     referenced in function
>     "class WTF::TextStream & __cdecl WTF::operator<<<struct WebKit::PrepareBackingStoreBuffersInputData,0>
>         (class WTF::TextStream &,class WTF::Vector<struct WebKit::PrepareBackingStoreBuffersInputData,0,class WTF::CrashOnOverflow,16,struct WTF::FastMalloc> const &)"
> RemoteRenderingBackendMessageReceiver.cpp.obj : error LNK2019: unresolved external symbol
>     "class WTF::TextStream & __cdecl WebKit::operator<<(class WTF::TextStream &,struct WebKit::PrepareBackingStoreBuffersOutputData const &)"
>     referenced in function
>     "class WTF::TextStream & __cdecl WTF::operator<<<struct WebKit::PrepareBackingStoreBuffersOutputData,0>
>         (class WTF::TextStream &,class WTF::Vector<struct WebKit::PrepareBackingStoreBuffersOutputData,0,class WTF::CrashOnOverflow,16,struct WTF::FastMalloc> const &)"

Conditioned out PrepareBackingStoreBuffersInputData and PrepareBackingStoreBuffersOutputData
with #if ENABLE(GPU_PROCESS) && PLATFORM(COCOA).

* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.h:
* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.messages.in:
* Source/WebKit/WebProcess/GPU/graphics/PrepareBackingStoreBuffersData.h:
* Source/WebKit/WebProcess/GPU/graphics/PrepareBackingStoreBuffersData.serialization.in:
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:

Canonical link: https://commits.webkit.org/261837@main